# mavericks-website-leptos

./: .gitattributes  Cargo.toml  index.html
.cargo/: config.toml
docs/: ElectromateReport.docx  MINI HOVERCRAFT.docx  Project information.docx  SOCCER BOT.docx
src/: index.css  main.rs
