[package]
name = "mav_redesign_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
enum-iterator = "1.4.1"
femme = "2.2.1"
futures = "0.3.28"
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
log = "0.4.20"

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true

